<resources>

    <string name="app_name" translatable="false">3Dify</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">3Dify</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_camera" translatable="false">Camera</string>
    <string name="menu_about_us" translatable="false">About Us</string>
    <string name="menu_settings" translatable="false">Settings</string>
    <string name="search" translatable="false">Search</string>
    <string name="camera" translatable="false">Camera</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="about_us" translatable="false">About Us</string>
    <string name="theme_switch" translatable="false">Switch Theme</string>
    <string name="description_fab" translatable="false">Open Camera</string>
    <string name="dark_theme" translatable="false">Dark Theme</string>
    <string name="back_button_description">Back Button</string>
    <string name="toggleButtonCameraText">Camera</string>
    <string name="toggleButtonRawDepthText">RawDepth</string>
</resources>